# OpenGLTemplate

./: CMakeLists.txt  compile_commands.json
assimp/: CMakeCache.txt  Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
assimp/code/: Makefile  cmake_install.cmake
assimp/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  zlib.pc
assimp/test/: Makefile  cmake_install.cmake
assimp/test/headercheck/: Makefile  cmake_install.cmake
cglm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cglmConfig.cmake  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
glfw/examples/: Makefile  cmake_install.cmake
glfw/lib/pkgconfig/: glfw3.pc
glfw/src/: Makefile  cmake_install.cmake  glfw3.pc
glfw/tests/: Makefile  cmake_install.cmake
src/: main.c  object.h  scaffold.c  scaffold.h  uniforms.h
